2011-09-20  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/SessionPlayer.cs:
	* Session/SessionSpectator.cs:
	* Session/SessionEventManager.cs:
	  All network shared types now derive from
	  Bang.ImmortalMarshalByRefObject and their disconnection from
	  RemotingServices is managed manually.
	Use Bang.Server.Session.[RemovePlayer|RemoveSpectator] instead
	  of UnregisterListener on some places.

	* Server.cs:
	* Session/Session.cs:
	* Session/Game/Game.cs:
	* Session/Game/Player.cs:
	* Session/Game/GameTable.cs:
	* Session/Game/Cards/Card.cs:
	  All network shared types now derive from
	  Bang.ImmortalMarshalByRefObject and their disconnection from
	  RemotingServices is managed manually.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Game/Player.cs:
	* Session/Game/PlayerControl.cs:
	  Bang.IPrivatePlayerView implementation now goes through a
	  proxy for security reasons.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Server.cs:
	  Tiny IO improvements.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* Bang# Server Daemon.csproj:
	  

	* Session/Game/Game.cs:
	* Session/Game/Player.cs:
	* Session/SessionPlayer.cs:
	* Session/Game/GameCycle.cs:
	* Session/Game/PlayerControl.cs:
	* Session/SessionEventManager.cs:
	* Session/Game/ResponseHandler.cs:
	* Session/Game/Characters/ProxyCharacter.cs:
	* Session/Game/Characters/Dodge City/VeraCuster.cs:
	  Added new base for "proxy characters" (like Vera Custer,
	  Greygory Deck).
	Added new response method.
	Added new RequestType values.
	Added new PublicPlayerView property - AdditionalCharacters
	  (the abilities gained by proxy characters).
	New way of getting player victory stats.

	* Session/Session.cs:
	  Added unified methods for getting the list of Role,
	  CharacterType or CardType enumeration values.
	New server state format.

	* Session/Game/Characters/Character.cs: